# 0-hello-api

./: README.md  pyproject.toml  start.sh
api/: config.py  main.py  routes.py
scripts/: configure_nginx_proxy.sh  publish_docker_image.sh  rebuild.sh  run_docker_container.sh
